<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chrisp.myapplication.ThisApplication"
    android:background="@color/material_grey_800">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top">

        <TextView
            android:layout_width="338dp"
            android:layout_height="119dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/this_site_heading"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal|top"
            android:textColor="#ffffff"
            android:textSize="48dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/examples_link"
            android:id="@+id/textView7"
            android:textColor="#ffffff"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/this_site_desc"
            android:id="@+id/textView6"
            android:textColor="#ffffff"
            android:layout_alignTop="@+id/textView5"
            android:layout_alignRight="@+id/textView7"
            android:layout_alignEnd="@+id/textView7"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="147dp"
            android:layout_marginRight="15dp" />

    </RelativeLayout>
</FrameLayout>
